language_tests/source_files/valid/interface_method_generic_infer_check.tr
// CHECK_ONLY
// Repro: generic interface method call on a bounded type parameter should infer method generics.

interface Identity {
    func touch[T](&mut self, _ value: T)
}

struct Box {}

impl Identity for Box {
    public func touch[T](&mut self, _ value: T) {}
}

func callTouch[I: Identity](_ value: &mut I) {
    value.touch(1 as int32)
}

func main() {
    var box = Box {}
    callTouch(&mut box)
}
